Fixed the alignment bug

--- a/seeker/src/App.css
+++ b/seeker/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
   display: flex;
@@ -10,4 +11,9 @@
 .auth-form, .login-form, .register-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 15%;
+  margin-bottom: 10px;
 }
